<resources>
    <string name="app_name">Sqlite</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="expense_form">Expense Form</string>
    <string name="hint_description">expense description</string>
    <string name="hint_amount">expense amount</string>
    <string name="hint_date">expense date</string>
    <string name="add_expense">Add Expense</string>
    <string name="create_new_record">Successfully created record with id of %d</string>
    <string name="update_record">Successfully updated record with id of %d</string>
    <string name="update_expense">Update Expense</string>
    <string name="cancel">Cancel</string>
</resources>
