<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/expense_form" />

    <EditText
        android:id="@+id/activity_main_description_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_description"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/activity_main_amount_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_amount"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/activity_main_date_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_date"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/activity_main_add_expense_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/add_expense"
        android:onClick="onAddExpense"/>

    <ListView
        android:id="@+id/activity_main_expenses_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>